--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "DulezzuaBakery Management System",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll=false",
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "swagger": "node ./swagger.js"
   },
   "repository": {
