--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "test": "jest --watchAll=false",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "swagger": "node ./swagger.js"
+    "swagger": "node ./swagger.js",
+    "build": "node ./swagger.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Alebproject32/dulezzuabakery_management_system.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "bakery",
+    "management",
+    "api",
+    "cse341"
+  ],
+  "author": "Tu Nombre",
   "license": "ISC",
   "type": "commonjs",
   "bugs": {
@@ -35,6 +41,7 @@
   },
   "devDependencies": {
     "jest": "^30.2.0",
+    "nodemon": "^3.1.0",
     "supertest": "^7.2.2"
   }
 }
